feat: Adds simple layout file for event details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FAITH</string>
+    <string name="event_details_title">Wat is er gebeurd?</string>
+    <string name="event_details_label_title">Geef de titel in:</string>
 </resources>
