--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,5 @@
     <string name="city_plan">Stadsplan</string>
     <string name="your_avatar">Je avatar</string>
     <string name="event_details_title">Wat is er gebeurd?</string>
-    <string name="event_details_label_title">Geef de titel in:</string>
+    <string name="event_details_label_title">Geef titel in:</string>
 </resources>
