--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="jens">https://avatars.dicebear.com/v2/male/jens.svg?options[mood][]=happy</string>
     <string name="karine">https://avatars.dicebear.com/v2/female/karine.svg?options[mood][]=happy</string>
     <string name="matthea">https://avatars.dicebear.com/v2/female/matthea.svg?options[mood][]=happy</string>
+    <string name="hoe_heet_je">Hoe heet je?</string>
+    <string name="naam_hint">Hier kan je naam zetten</string>
 </resources>
