refactor: Correct results of Android Lint

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="lineWidth_thin">dun</string>
     <string name="lineWidth_medium">middel</string>
     <string name="lineWidth_Thick">dik</string>
+    <string name="undo">ongedaan maken</string>
+    <string name="city_plan">Stadsplan</string>
+    <string name="your_avatar">Je avatar</string>
 </resources>
