--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,22 @@
 <resources>
     <string name="app_name">FAITH</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="string_avatar_name">Name</string>
-
     <string name="harm">https://avatars.dicebear.com/v2/male/harm.svg?options[mood][]=happy</string>
     <string name="jens">https://avatars.dicebear.com/v2/male/jens.svg?options[mood][]=happy</string>
     <string name="karine">https://avatars.dicebear.com/v2/female/karine.svg?options[mood][]=happy</string>
     <string name="matthea">https://avatars.dicebear.com/v2/female/matthea.svg?options[mood][]=happy</string>
     <string name="hoe_heet_je">Hoe heet je?</string>
-    <string name="naam_hint">Hier kan je naam zetten</string>
-
+    <string name="naam_hint">Hier kan je je naam zetten</string>
+    <string name="choose_black">Kies zwart</string>
+    <string name="choose_blue">Kies blauw</string>
+    <string name="choose_red">Kies rood</string>
+    <string name="choose_yellow">Kies geel</string>
+    <string name="choose_green">Kies groen</string>
+    <string name="lineWidth_thin">dun</string>
+    <string name="lineWidth_medium">middel</string>
+    <string name="lineWidth_Thick">dik</string>
+    <string name="undo">ongedaan maken</string>
+    <string name="city_plan">Stadsplan</string>
+    <string name="your_avatar">Je avatar</string>
 </resources>
