feat: Forward UI events to ViewModel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="event_details_title">Wat is er gebeurd?</string>
     <string name="event_details_label_title">Geef titel in:</string>
     <string name="permission_take_picture">Je moet je toestemming geven om foto\'s te nemen</string>
+    <string name="frag_takePhoto_goToEmotionAvatar">Ga naar emotieavatar</string>
+    <string name="frag_takePhoto_takePhoto">Neem foto</string>
 </resources>
