feat: ensure photo thumbnails are added to list
Also adds simple UI test to check this, but currently it requires
the Espresso thread to sleep, which isn't clean.
FAITH-13

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,9 @@
     <string name="frag_takePhoto_takePhoto">Neem foto</string>
     <string name="frag_takePhoto_saveSucces">Foto werd opgeslagen</string>
     <string name="frag_takePhoto_saveFailed">Fout bij opslaan foto</string>
+    <string name="description_thumbnail">Miniatuur</string>
+    <string name="description_addText">Tekst toevoegen</string>
+    <string name="description_addPhoto">Foto toevoegen</string>
+    <string name="description_addAudio">Geluidsopname toevoegen</string>
+    <string name="description_addDrawing">Tekening toevoegen</string>
 </resources>
