--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,8 @@
     <string name="event_details_label_title">Geef titel in:</string>
     <string name="permission_record_audio">Je moet je toestemming geven om geluid op te nemen</string>
     <string name="error_saving_drawing">Er gebeurde een fout tijdens het opslaan van je afbeelding.</string>
+    <string name="description_start_recording">Start opname</string>
+    <string name="description_restart_recording">Herstart opname</string>
+    <string name="description_stop_recording">Stop opname</string>
+    <string name="description_pause_recording">Pauzeer opname</string>
 </resources>
