--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,15 @@
     <string name="lbl_save">Opslaan</string>
     <string name="toast_foto_saved_success">Je foto werd opgeslagen!</string>
     <string name="toast_save_photo_failed">Er ging iets fout bij het opslaan van je foto.</string>
+    <string name="terug_naar_de_stad">Terug naar de stad</string>
+    <string name="nav_emotieregulatie">Emotieregulatie</string>
+    <string name="nav_overzicht_gebeurtenissen">overzicht gebeurtenissen</string>
+    <string name="navigation_terugNaarDeStad">Terug naar de stad</string>
+    <string name="header_emotie_regulatie">Emotie regulatie</string>
+    <string name="frag_viewEvent_notes">notes</string>
+    <string name="ok">ok</string>
+    <string name="cancel">cancel</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
