--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,9 @@
     <string name="hint_audio_recording_name">Een naam voor deze opname</string>
     <string name="save">Opslaan</string>
     <string name="toast_save_audio_success">Je opname werd opgeslagen</string>
+    <string name="toast_save_event_success">Je gebeurtenis werd opgeslagen</string>
     <string name="toast_save_audio_failed">Er ging iets fout bij het opslaan van je opname</string>
+    <string name="toast_save_event_failed">Er ging iets fout bij het opslaan van je gebeurtenis</string>
     <string name="error_pause_not_supported">Pauzeren wordt door je apparaat niet ondersteund</string>
     <string name="permission_take_picture">Je moet je toestemming geven om foto\'s te nemen</string>
     <string name="frag_takePhoto_goToEmotionAvatar">Ga naar emotieavatar</string>
@@ -49,6 +51,7 @@
     <string name="lbl_name">Naam:</string>
     <string name="lbl_save">Opslaan</string>
     <string name="toast_foto_saved_success">Je foto werd opgeslagen!</string>
+    <string name="toast_event_no_title">Je moet een titel geven aan je gebeurtenis voordat je ze kan opslaan!</string>
     <string name="toast_save_photo_failed">Er ging iets fout bij het opslaan van je foto.</string>
     <string name="lbl_save_event_notes">Notities</string>
     <string name="lbl_save_event_date">Dag</string>
