--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,8 +51,9 @@
     <string name="lbl_name">Naam:</string>
     <string name="lbl_save">Opslaan</string>
     <string name="toast_save_photo_success">Je foto werd opgeslagen!</string>
-    <string name="toast_event_no_title">Je moet een titel geven aan je gebeurtenis voordat je ze kan opslaan!</string>
+    <string name="DateTime_no_title">Je moet een titel geven aan je gebeurtenis voordat je ze kan opslaan!</string>
     <string name="toast_save_photo_failed">Er ging iets fout bij het opslaan van je foto.</string>
+    <string name="toast_event_no_title">Je moet een titel geven aan je gebeurtenis.</string>
     <string name="lbl_save_event_notes">Notities</string>
     <string name="lbl_save_event_date">Dag</string>
     <string name="lbl_save_event_title">Titel</string>
