--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,10 +31,11 @@
     <string name="lbl_detail_name">Naam:</string>
     <string name="hint_audio_recording_name">Een naam voor deze opname</string>
     <string name="save">Opslaan</string>
-    <string name="toast_save_audio_success">Je opname werd opgeslagen</string>
-    <string name="toast_save_event_success">Je gebeurtenis werd opgeslagen</string>
-    <string name="toast_save_audio_failed">Er ging iets fout bij het opslaan van je opname</string>
-    <string name="toast_save_event_failed">Er ging iets fout bij het opslaan van je gebeurtenis</string>
+    <string name="error_save_audio_success">Je opname werd opgeslagen</string>
+    <string name="error_save_event_success">Je gebeurtenis werd opgeslagen</string>
+    <string name="error_save_audio_failed">Er ging iets fout bij het opslaan van je opname</string>
+    <string name="error_save_event_failed">Er ging iets fout bij het opslaan van je gebeurtenis</string>
+    <string name="error_save_avatar_failed">Er ging iets fout bij het opslaan van je avatar</string>
     <string name="error_pause_not_supported">Pauzeren wordt door je apparaat niet ondersteund</string>
     <string name="permission_take_picture">Je moet je toestemming geven om foto\'s te nemen</string>
     <string name="frag_takePhoto_goToEmotionAvatar">Ga naar emotieavatar</string>
@@ -50,7 +51,7 @@
     <string name="hint_photo_name">een naam voor je foto</string>
     <string name="lbl_name">Naam:</string>
     <string name="lbl_save">Opslaan</string>
-    <string name="toast_save_photo_success">Je foto werd opgeslagen!</string>
+    <string name="save_photo_success">Je foto werd opgeslagen!</string>
     <string name="DateTime_no_title">Je moet een titel geven aan je gebeurtenis voordat je ze kan opslaan!</string>
     <string name="toast_save_photo_failed">Er ging iets fout bij het opslaan van je foto.</string>
     <string name="terug_naar_de_stad">Terug naar de stad</string>
@@ -64,8 +65,8 @@
     <string name="ok">@android:string/ok</string>
     <string name="cancel">@android:string/cancel</string>
     <string name="txt_error_userNameOrAvatarNotSet">Vul je naam in en selecteer een avatar</string>
-    <string name="toast_save_user_failed">Het opslaan van de nieuwe gebruiker is gefaald.</string>
-    <string name="toast_event_no_title">Je moet een titel geven aan je gebeurtenis.</string>
+    <string name="error_save_user_failed">Het opslaan van de nieuwe gebruiker is gefaald.</string>
+    <string name="error_event_no_title">Je moet een titel geven aan je gebeurtenis.</string>
     <string name="lbl_save_event_notes">Notities</string>
     <string name="lbl_save_event_date">Dag</string>
     <string name="lbl_save_event_title">Titel</string>
