feat:added enterTextFragment and ViewModel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,7 @@
     <string name="lbl_activity_city">De Stad</string>
     <string name="description_event_avatar">Getekende avatar voor de gebeurtenis</string>
     <string name="descr_city_park">Het stadspark</string>
+    <string name="klein">small</string>
+    <string name="normaal">normal</string>
+    <string name="groot">large</string>
 </resources>
