--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,17 +31,17 @@
     <string name="lbl_detail_name">Naam:</string>
     <string name="hint_audio_recording_name">Een naam voor deze opname</string>
     <string name="save">Opslaan</string>
-    <string name="error_save_audio_success">Je opname werd opgeslagen</string>
-    <string name="error_save_event_success">Je gebeurtenis werd opgeslagen</string>
+    <string name="save_audio_success">Je opname werd opgeslagen</string>
+    <string name="save_event_success">Je gebeurtenis werd opgeslagen</string>
     <string name="error_save_audio_failed">Er ging iets fout bij het opslaan van je opname</string>
     <string name="error_save_event_failed">Er ging iets fout bij het opslaan van je gebeurtenis</string>
     <string name="error_save_avatar_failed">Er ging iets fout bij het opslaan van je avatar</string>
+    <string name="error_save_photo_failed">Fout bij opslaan foto</string>
     <string name="error_pause_not_supported">Pauzeren wordt door je apparaat niet ondersteund</string>
     <string name="permission_take_picture">Je moet je toestemming geven om foto\'s te nemen</string>
     <string name="frag_takePhoto_goToEmotionAvatar">Ga naar emotieavatar</string>
     <string name="frag_takePhoto_takePhoto">Neem foto</string>
     <string name="frag_takePhoto_saveSucces">Foto werd opgeslagen</string>
-    <string name="frag_takePhoto_saveFailed">Fout bij opslaan foto</string>
     <string name="description_thumbnail">Miniatuur</string>
     <string name="description_addText">Tekst toevoegen</string>
     <string name="description_addPhoto">Foto toevoegen</string>
