--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,8 @@
     <string name="login_error_noUsername">Je moet je gebruikersnaam ingeven!</string>
     <string name="login_error_noPassword">Je moet je wachtwoord ingeven!</string>
 
+    <!-- Information for authentication and authorization !-->
+    <string name="com_auth0_client_id">yeKdXzq9JB1fXqmBb0LMnNGFzUBxJmFA</string>
+    <string name="com_auth0_domain">e-quality.eu.auth0.com</string>
+
 </resources>
