[fix] Restructure application with the help of Harm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,5 +107,6 @@
     <string name="register_passwords_nomatch">Je ingevulde wachtwoorden zijn niet gelijk aan elkaar.</string>
     <string name="register_password_empty">Je moet een wachtwoord ingeven.</string>
     <string name="register_error_create_user">Er ging iets fout bij het aanmaken van je nieuwe gebruiker.</string>
+    <string name="error_no_credentials">No credentials have been stored</string>
 
 </resources>
