Fix : take photo with buttons at the bottom of screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,6 @@
     <string name="choose_underline">kies onderlijnd</string>
     <string name="choose_italic">kies cursief</string>
     <string name="choose_bold">kies vetjes</string>
+    <string name="take_photo_de_foto">de foto</string>
+    <string name="take_photo_neem_foto">neem foto</string>
 </resources>
