--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,5 @@
     <string name="take_photo_de_foto">de foto</string>
     <string name="take_photo_neem_foto">neem foto</string>
     <string name="register_username_empty">Je gebruikersnaam mag niet leeg zijn.</string>
+    <string name="register_avatar_mustSelect">Je moet nog een avatar selecteren.</string>
 </resources>
