fix: leaving the archive results in logging out
The OverviewEventsFragment was part of the cityscreenactivity and
closing it meant closing the Activity.
It is now placed in its own Activity so closing it works as intended.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,5 @@
     <!-- Information for authentication and authorization !-->
     <string name="com_auth0_client_id">VRX5hqPAdDhkj5DJJ9df4Q4SMZS06io9</string>
     <string name="com_auth0_domain">e-quality.eu.auth0.com</string>
+    <string name="lbl_archive">Je archief</string>
 </resources>
