--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="error_save_avatar_failed">Er ging iets fout bij het opslaan van je avatar</string>
     <string name="error_save_photo_failed">Er ging iets fout bij het opslaan van je foto</string>
     <string name="error_save_text_failed">Er ging iets fout bij het opslaan van je tekst</string>
+    <string name="error_load_text_failed">Er ging iets fout bij het laden van je tekst</string>
     <string name="error_save_drawing_failed">Er ging iets fout bij het opslaan van je tekening</string>
     <string name="error_pause_not_supported">Pauzeren wordt door je apparaat niet ondersteund</string>
     <string name="permission_take_picture">Je moet je toestemming geven om foto\'s te nemen</string>
