--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,4 +129,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="datum">Datum</string>
+    <string name="hier_kan_je_de_notities_kwijt">Hier kan je de notities kwijt</string>
 </resources>
