[layout] Set layout for register screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,4 +131,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="datum">Datum</string>
     <string name="hier_kan_je_de_notities_kwijt">Hier kan je de notities kwijt</string>
+    <string name="ga_verder">Ga verder</string>
 </resources>
