[layout] Style Enter text Fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,4 +132,5 @@
     <string name="datum">Datum</string>
     <string name="hier_kan_je_de_notities_kwijt">Hier kan je de notities kwijt</string>
     <string name="ga_verder">Ga verder</string>
+    <string name="underline"><u>U</u></string>
 </resources>
