refactor: AudioDetail to use DetailFragment/VM

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,5 @@
     <string name="hier_kan_je_de_notities_kwijt">Hier kan je de notities kwijt</string>
     <string name="ga_verder">Ga verder</string>
     <string name="underline"><u>U</u></string>
+    <string name="avatar_save_successfull">Je avatar werd succesvol opgeslagen.</string>
 </resources>
