test: update app module tests after refactor
Only made sure they pass but require additional tests for new
functionality.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,4 +134,6 @@
     <string name="ga_verder">Ga verder</string>
     <string name="underline"><u>U</u></string>
     <string name="avatar_save_successfull">Je avatar werd succesvol opgeslagen.</string>
+    <string name="create_photo_failed">Er ging iets fout bij het aanmaken van je foto.</string>
+    <string name="text_save_error_emptyinput">Je hebt nog geen tekst geschreven!</string>
 </resources>
