BF drawing : als tekst geselecteerd dan letters tonen ipv penselen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,4 +139,5 @@
     <string name="empty">""</string>
     <string name="kies_een_wachtwoord">Kies een wachtwoord</string>
     <string name="herhaal_je_wachtwoord">Herhaal je wachtwoord</string>
+    <string name="textSize_a">A</string>
 </resources>
