Feature emotieavatar - opnieuw beginnen (gom wist ook de contouren van de avatar)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -152,4 +152,5 @@
     <string name="create_photo_failed">Er ging iets fout bij het aanmaken van je foto.</string>
     <string name="text_save_error_emptyinput">Je hebt nog geen tekst geschreven!</string>
     <string name="textSize_a">A</string>
+    <string name="opnieuw">Opnieuw</string>
 </resources>
