feat : implementatie nieuwe layout register info

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,4 +160,5 @@
     <string name="ik_ben_nieuw">Ik ben nieuw</string>
     <string name="ster">ster</string>
     <string name="naar_de_stad">Naar de stad</string>
+    <string name="register_background">register background</string>
 </resources>
