--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,4 +163,5 @@
     <string name="register_background">register background</string>
     <string name="confirm">ok</string>
     <string name="kies_een_kleur">Kies een kleur</string>
+    <string name="redo">redo</string>
 </resources>
