--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
     <string name="header_emotie_regulatie">Emotie regulatie</string>
     <string name="frag_viewEvent_notes">notes</string>
     <string name="dialog_to_the_event_title">"Wil je teruggaan naar het park?</string>
+    <string name="dialog_takePhoto_cancel_message">Ben je zeker? Je foto is nog niet opgeslagen!</string>
     <string name="dialog_to_the_event_message">Ben je zeker? Je tekening is nog niet opgeslagen!</string>
     <string name="dialog_to_the_city_title">"Wil je teruggaan naar de stad?</string>
     <string name="dialog_to_the_city_message">Ben je zeker? Je gebeurtenis is nog niet opgeslagen!</string>
@@ -172,4 +173,5 @@
     <string name="tekst">tekst</string>
     <string name="gom">gom</string>
     <string name="pijl">pijl</string>
+    <string name="in_de_prullenmand">in de prullenmand</string>
 </resources>
