FAITH-195 : Het openschuiven van de emotievatar moet mooi gestyled worden

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,4 +176,6 @@
     <string name="gom">gom</string>
     <string name="pijl">pijl</string>
     <string name="in_de_prullenmand">in de prullenmand</string>
+    <string name="editeer">editeer</string>
+    <string name="slide">schuif avatar open</string>
 </resources>
