--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="frag_viewEvent_notes">notes</string>
     <string name="dialog_to_the_event_title">"Wil je teruggaan naar het park?</string>
     <string name="dialog_takePhoto_cancel_message">Ben je zeker? Je foto is nog niet opgeslagen!</string>
+    <string name="dialog_enterText_cancel_message">Ben je zeker? Je tekst is nog niet opgeslagen!</string>
     <string name="dialog_to_the_event_message">Ben je zeker? Je tekening is nog niet opgeslagen!</string>
     <string name="dialog_to_restart_drawavatar_title">"Wil je opniew beginnen?</string>
     <string name="dialog_to_restart_drawavatar_message">Ben je zeker?</string>
@@ -176,4 +177,6 @@
     <string name="gom">gom</string>
     <string name="pijl">pijl</string>
     <string name="in_de_prullenmand">in de prullenmand</string>
+    <string name="tekstgrootte">tekstgrootte</string>
+    <string name="kies_tekstgrootte">kies tekstgrootte</string>
 </resources>
