--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -178,5 +178,6 @@
     <string name="foto_nemen">Foto nemen</string>
     <string name="add_video">Filmen</string>
     <string name="title_backpack">Backpack</string>
+    <string name="add_detail_menu_backpack">Detail toevoegen aan rugzak</string>
 
 </resources>
