--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,8 +174,8 @@
     <string name="gom">gom</string>
     <string name="pijl">pijl</string>
     <string name="in_de_prullenmand">in de prullenmand</string>
-    <string name="bestand_toevoegen">Bestand toevoegen</string>
-    <string name="foto_nemen">Foto nemen</string>
+    <string name="bestand_toevoegen">Bestand\ntoevoegen</string>
+    <string name="foto_nemen">Foto\nnemen</string>
     <string name="add_video">Filmen</string>
     <string name="title_backpack">Backpack</string>
     <string name="add_detail_menu_backpack">Detail toevoegen aan rugzak</string>
