WIP : binding met EventListViewModel design EventDetail fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,4 +188,5 @@
     <string name="datumVan">van</string>
     <string name="datumTot">tot</string>
     <string name="wat_zoek_je">wat zoek je?</string>
+    <string name="potlood">potlood</string>
 </resources>
