--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -192,5 +192,6 @@
     <string name="backpack_btn_delete">Verwijderknop rugzak</string>
     <string name="backpack_btn_open_filter">Open zoekmenu rugzak</string>
     <string name="backpack_btn_add">"Knop voeg toe "</string>
-
+    <string name="save_detail_maxChar">"Bestandsnaam max 30 karakters"</string>
+    <string name="save_detail_emptyString">"Gelieve een bestandsnaam in te geven"</string>
 </resources>
